--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,3 +11,11 @@ build_output_dir = "dist"
 
 # 环境变量（生产环境在 Cloudflare Dashboard 中设置）
 # VITE_API_BASE = "https://your-backend.zeabur.app/api"
+
+# 构建配置
+[build]
+command = "npm run build"
+
+# 兼容性设置
+[build.environment_variables]
+NODE_VERSION = "20"
